crates/toml_edit/tests/snapshots/invalid/key/bare-invalid-character-02.stderr
TOML parse error at line 1, column 5
  |
1 | bare!key = 123
  |     ^
invalid unquoted key, expected letters, numbers, `-`, `_`
